--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -39,7 +39,9 @@
               "src/styles.scss",
               "./node_modules/leaflet/dist/leaflet.css",
               "./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
-              "./node_modules/leaflet.markercluster/dist/MarkerCluster.css"
+              "./node_modules/leaflet.markercluster/dist/MarkerCluster.css",
+              "./node_modules/leaflet-draw/dist/leaflet.draw.css",
+              "./node_modules/leaflet-draw/dist/leaflet.draw-src.css"
             ],
             "scripts": []
           },
