--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +25,9 @@
     "@asymmetrik/ngx-leaflet-markercluster": "^16.0.0",
     "@types/leaflet-markercluster": "^1.0.3",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
+    "patch-package": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -35,6 +38,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet-draw": "^1.0.7",
     "@types/leaflet.markercluster": "^1.5.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
