gitignore more files

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,12 @@
 data
+../2023_Praca_inzynierska_Konrad_Wysokinski.docx
+../7300_days.zip
+../frontend
+../from_2016_09_27.zip
+../Prezentacja_1_KonradWysokinski.pptx
+../Prezentacja_2_KonradWysokinski.pptx
+../Prezentacja_3_KonradWysokinski.pptx
+../s11069-012-0322-2.pdf
+../test.py
+../test_data_single.json
+../up_to_29_6_2016.zip
