--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Project
+../wrong_data
+../backend
+
 # Compiled output
 /dist
 /tmp
