--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,8 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Project
-../wrong_data
-../backend
+/backend
+/wrong_data
 
 # Compiled output
 /dist
