--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
+    "moment": "^2.29.4",
     "patch-package": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
