--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.1",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.1",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.11",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/elements": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.11",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@asymmetrik/ngx-leaflet-markercluster": "^16.0.0",
     "@types/leaflet-markercluster": "^1.0.3",
@@ -36,7 +37,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.0.1",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "@types/leaflet-draw": "^1.0.7",
