--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -2,5 +2,9 @@
   "baseUrl": "http://127.0.0.1:9999/",
   "earthquake": "earthquake/",
   "types": "types/",
-  "docs": "docs/"
+  "docs": "docs/",
+  "csv": "csv/",
+  "geojson": "geojson/",
+  "xlsx": "xlsx/",
+  "xml": "xml/"
 }
